--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "sass": "^1.56.2",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "web3": "^1.8.1"
   }
 }
