--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "axios": "^1.2.1",
     "sass": "^1.56.2",
     "vite": "^4.0.0",
     "web3": "^1.8.1"
